# FugioTime

./: CMakeLists.txt
console/: CMakeLists.txt  clientconsole.cpp  main.cpp
consoleclient/: CMakeLists.txt  clientconsole.cpp  clientconsole.h  main.cpp
gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
lib/: timecast.cpp  timecast.h  timedatagram.h  timeserver.cpp  timeserver.h  timesync.cpp  timesync.h
